create a series of debug and a blog '代码调试系列之前端代码调试的几种基本方法'

--- a/src/debug/1.md
+++ b/src/debug/1.md
@@ -3,6 +3,13 @@
 
 接下来我们将一一举栗一些调试方法。
 
+### 目录
+[alert弹框调试](https://github.com/yaodebian/blog/blob/master/src/debug/1.md#%E4%B8%80alert%E5%BC%B9%E6%A1%86%E8%B0%83%E8%AF%95)
+
+[console](https://github.com/yaodebian/blog/blob/master/src/debug/1.md#%E4%BA%8Cconsole)
+
+[JS断点](https://github.com/yaodebian/blog/blob/master/src/debug/1.md#%E4%B8%89js%E6%96%AD%E7%82%B9)
+
 ### 一.alert弹框调试
 正对js代码的调试，我们往往需要获取某些变量的值，于是在早期我们往往通过alert方法将变量的值通过弹窗的形式进行打印。
 
