update layout_series: 前端布局之——水平垂直居中

--- a/src/layout_series/1.md
+++ b/src/layout_series/1.md
@@ -1,5 +1,10 @@
 # 前端布局之——水平垂直居中
 
+#### 其他平台文章地址
+
+- csdn：[https://blog.csdn.net/YaoDeBiAn/article/details/100907015](https://blog.csdn.net/YaoDeBiAn/article/details/100907015)
+- 知乎：[https://zhuanlan.zhihu.com/p/83553320](https://zhuanlan.zhihu.com/p/83553320)
+
 前端页面的居中是平常开发中比较常见的布局，以下将从**水平居中**、**垂直居中**、**水平垂直居中**三个角度分析不同的布局方法。
 
 ## 水平居中
