--- a/src/layout_series/2.md
+++ b/src/layout_series/2.md
@@ -4,8 +4,10 @@
 > 场景：手机屏幕上需要垂直展示两个栏目块，并保证栏目块与顶部底部的距离、栏目块之间的距离相等（当然要满足不同的屏幕高度，即高度适配）。
 
 具体效果大致如下：
-![在这里插入图片描述](https://img-blog.csdnimg.cn/20191122170008306.jpg?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L1lhb0RlQmlBbg==,size_16,color_FFFFFF,t_70)
+![在这里插入图片描述](https://raw.githubusercontent.com/yaodebian/blog/master/src/layout_series/imgs/md2/1.jpg)
+
 要求保持上面的三块高度相等。
+
 **Now let's try several methods below:**
 
 1. 方法一：基于flex实现
