--- a/src/javascript/1.md
+++ b/src/javascript/1.md
@@ -26,7 +26,7 @@ clientWidth 包括 content、padding 两个部分，而不包括 border、margin
 
 > Typically, offsetWidth is a measurement in pixels of the element's CSS width, including any borders, padding, and vertical scrollbars (if rendered). It does not include the width of pseudo-elements such as ::before or ::after.
 
-offsetWidth 包括 content、padding、滚动条三部分。
+offsetWidth 包括 content、padding、滚动条、border。
 
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20201025164903665.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L1lhb0RlQmlBbg==,size_16,color_FFFFFF,t_70#pic_center)
 
