--- a/src/javascript/2.md
+++ b/src/javascript/2.md
@@ -110,41 +110,6 @@ let endTime = new Date().getTime()
 console.log('arr_objde:', endTime - startTime)
 ```
 
-```
-uncertain_attr_arr: 使用 es6 的 destructuring 获取数组中所有的值
-
-let startTime = new Date().getTime()
-let arr = [1, 2, 3, 4, 5, 6, 7, 8]
-let a = [...arr]
-for (let i = 0; i < 10000000; i++) {
-  (a = [...arr])
-}
-let endTime = new Date().getTime()
-console.log('uncertain_attr_arr:', endTime - startTime)
-```
-
-```
-uncertain_attr_obj: 使用 es6 的 destructuring 获取对象中所有的值
-
-let startTime = new Date().getTime()
-let obj = {
-  a: 1,
-  b: 2,
-  3: 3,
-  4: 4,
-  5: 5,
-  6: 6,
-  7: 7,
-  8: 8,
-}
-let a = { ...obj }
-for (let i = 0; i < 10000000; i++) {
-  (a = { ...obj })
-}
-let endTime = new Date().getTime()
-console.log('uncertain_attr_obj:', endTime - startTime)
-```
-
 我们把上面这些脚本在浏览器中一起执行一下（我在每段脚本最外层包了一层: (function () { ... })()，也就是匿名函数自执行，为的是隔离作用域 ），打印出来以下信息：
 
 ```
@@ -154,8 +119,6 @@ arr_destructuring: 30
 obj_destructuring: 9
 arr_arrde: 27
 arr_objde: 9
-uncertain_attr_arr: 153
-uncertain_attr_obj: 299
 ```
 
 因此，我们可以得出基本的结论：
@@ -164,7 +127,6 @@ uncertain_attr_obj: 299
   - 数组：es6 数组解构比 es5 效率更低，通过数组解构或对象解构对数组属性值进行获取，对象解构效率更高；
   - 对象：es6 对象解构跟 es5 效率基本一致；
   - 数组-对象：es5 下效率基本一致，es6 下对象解构会更快一些；
-- 当不明确要获取哪些属性时：比如上面我们解构数组或者对象中所有的属性值，数组解构会更快一些；
 
 **which destructuring**
 
@@ -175,7 +137,6 @@ uncertain_attr_obj: 299
 - 当明确要获取哪些属性：
   - 解构数组时：我们可以选择对象解构来解构数组，首先是因为这种情况下它的效率会更高一些，同时对象解构的代码可读性、可维护性更高（比如：let [a, , b] = [1, 2, 3] 和 let { 0: a, 2: b } = [1, 2, 3]）;
   - 函数参数解构时，我们也可以使用对象解构，原因同上；
-- 当不明确要获取哪些属性时，可以选择使用数组解构（从性能上来说是这样，具体场景暂时没想到）；
 
 **两种解构有什么特殊的用法呢**
 
@@ -227,6 +188,11 @@ move({ x: 3 }) // [3, undefined]
 move({}) // [undefined, undefined]
 move() // [0, 0]
 ```
+
+**总结**
+
+- 实际上，数组解构和对象解构性能上并没有相差太大，不用刻意去比较，场景适合哪种解构就用哪种解构；
+- 相比于数组解构，对象解构的可读性和代码可维护性会好些，因为不需要像数组解构那样去跳过某个值而去获取下一个值；
 
 **参考文章**
 
